--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-streamlit
-google-generativeai
-PyPDF2
-speech_recognition
-numpy
-sentence-transformers
-scikit-learn
-gTTS
-pygame
-python-dotenv
+streamlit 
+google-generativeai 
+PyPDF2 
+sentence-transformers 
+scikit-learn 
+gTTS 
+python-dotenv 
+audio-recorder-streamlit 
+SpeechRecognition
